# OptiX_Utility

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GLToolkit.h  LICENSE.md  OptiX7_GLFW_ImGui.sln  OptiX7_GLFW_ImGui.vcxproj  OptiX7_GLFW_ImGui.vcxproj.filters  OptiX_Utility.sln  README.md  cuda_helper.cpp  cuda_helper.h  cuda_util.cpp  cuda_util.h  cuda_util.natvis  deform.cu  kernel.cu  main.cpp  memo.md  memo.txt  optix_kernels.cu  optix_util.cpp  optix_util.h  optix_util.natvis  optix_util_private.h  optix_wrapper.cpp  optix_wrapper.h  optix_wrapper_private.h  optixu_on_cudau.h  post_process.cu  run_tests.py  shared.h  stopwatch.h
cmake/: FindOptiX91.cmake  (+1 more)
samples/: CMakeLists.txt  OptiX_Utility.sln  optixu_samples.sln  optixu_samples.slnx  optixu_samples_vs2026.slnx
samples/__support_files/: __support_files.vcxitems  __support_files.vcxproj  __support_files.vcxproj.filters
samples/as_update/: CMakeLists.txt  as_update.vcxproj  as_update.vcxproj.filters  as_update_main.cpp  as_update_shared.h  as_update_vs2026.vcxproj.filters  deform.cu  optix_kernels.cu
samples/callable_program/: CMakeLists.txt  bsdfs.cu  callable_program.vcxproj  callable_program.vcxproj.filters  callable_program_main.cpp  callable_program_shared.h  callable_program_vs2026.vcxproj  copy_buffers.cu  optix_bsdfs.cu  optix_path_tracing.cu
samples/clusters/: CMakeLists.txt  clusters.vcxproj  clusters.vcxproj.filters  clusters_main.cpp  clusters_shared.h  clusters_vs2026.vcxproj  lod_decision_kernels.cu  optix_kernels.cu
samples/common/: common.cpp  common.h  curve_evaluator.h  dds_loader.cpp  dds_loader.h  dmm_generator.cpp  dmm_generator.h  dmm_generator_private.h  dmm_kernels.cu  gl_util.cpp  gl_util.h  gui_common.cpp  gui_common.h  imgui_file_dialog.cpp  imgui_file_dialog.h  imgui_more.h  micro_map_generator.cpp  micro_map_generator_misc.cu  micro_map_generator_private.h  micro_map_kernels.cu  obj_loader.cpp  obj_loader.h  omm_generator.cpp  omm_generator.h  omm_generator_misc.cu  omm_generator_private.h  omm_kernels.cu
samples/common/micro_map/: dmm_generator.cpp  dmm_generator.h  dmm_generator_private.h  dmm_kernels.cu  micro_map_generator.cpp  micro_map_generator_misc.cu  micro_map_generator_private.h  micro_map_kernels.cu  omm_generator.cpp  omm_generator.h  omm_generator_private.h  omm_kernels.cu
samples/common/shaders/: drawOptiXResult.frag
samples/curve_primitive/: CMakeLists.txt  curve_evaluator.h  curve_primitive.vcxproj  curve_primitive.vcxproj.filters  curve_primitive_main.cpp  curve_primitive_shared.h  curve_primitive_vs2026.vcxproj.filters  optix_kernels.cu
samples/custom_primitive/: CMakeLists.txt  custom_primitive.vcxproj  custom_primitive.vcxproj.filters  custom_primitive_main.cpp  custom_primitive_shared.h  optix_kernels.cu
samples/deformation_blur/: CMakeLists.txt  deformation_blur.vcxproj  deformation_blur.vcxproj.filters  deformation_blur_main.cpp  deformation_blur_shared.h  deformation_blur_vs2026.vcxproj  optix_kernels.cu
samples/denoiser/: CMakeLists.txt  copy_buffers.cu  denoiser.vcxproj  denoiser.vcxproj.filters  denoiser_main.cpp  denoiser_shared.h  denoiser_vs2026.vcxproj.filters  optix_kernels.cu  optix_path_tracing.cu
samples/displacement_micro_map/: CMakeLists.txt  displacement_micro_map.vcxproj  displacement_micro_map.vcxproj.filters  displacement_micro_map_main.cpp  displacement_micro_map_shared.h  optix_kernels.cu
samples/material_sets/: CMakeLists.txt  material_sets.vcxproj  material_sets.vcxproj.filters  material_sets_main.cpp  material_sets_shared.h  material_sets_vs2026.vcxproj  optix_kernels.cu
samples/multi_level_instancing/: CMakeLists.txt  multi_level_instancing.vcxproj  multi_level_instancing.vcxproj.filters  multi_level_instancing_main.cpp  multi_level_instancing_shared.h  optix_kernels.cu
samples/opacity_micro_map/: CMakeLists.txt  omm_generator.cpp  omm_generator.h  omm_kernels.cu  opacity_micro_map.vcxproj  opacity_micro_map.vcxproj.filters  opacity_micro_map_main.cpp  opacity_micro_map_shared.h  opacity_micro_map_vs2026.vcxproj  opacity_micro_map_vs2026.vcxproj.filters  optix_kernels.cu
samples/payload_annotation/: CMakeLists.txt  optix_kernels.cu  optix_path_tracing.cu  payload_annotation.vcxproj  payload_annotation.vcxproj.filters  payload_annotation_main.cpp  payload_annotation_shared.h
samples/pick/: CMakeLists.txt  optix_pick_kernels.cu  optix_render_kernels.cu  pick.vcxproj  pick.vcxproj.filters  pick_kernels.cu  pick_main.cpp  pick_shared.h  pick_vs2026.vcxproj  render_kernels.cu
samples/scene_edit/: CMakeLists.txt  optix_kernels.cu  scene_edit.vcxproj  scene_edit.vcxproj.filters  scene_edit_main.cpp  scene_edit_shared.h  scene_edit_vs2026.vcxproj  scene_edit_vs2026.vcxproj.filters
samples/single_gas/: CMakeLists.txt  optix_kernels.cu  single_gas.vcxproj  single_gas.vcxproj.filters  single_gas_main.cpp  single_gas_shared.h  single_gas_vs2026.vcxproj  single_gas_vs2026.vcxproj.filters
samples/single_level_instancing/: CMakeLists.txt  optix_kernels.cu  single_level_instancing.vcxproj  single_level_instancing.vcxproj.filters  single_level_instancing_main.cpp  single_level_instancing_shared.h  single_level_instancing_vs2026.vcxproj
samples/sphere_primitive/: CMakeLists.txt  optix_kernels.cu  sphere_primitive.vcxproj  sphere_primitive.vcxproj.filters  sphere_primitive_main.cpp  sphere_primitive_shared.h  sphere_primitive_vs2026.vcxproj
samples/temporal_denoiser/: CMakeLists.txt  copy_buffers.cu  copy_denoised_buffer.cu  copy_to_output_buffer.cu  optix_kernels.cu  optix_path_tracing.cu  temporal_denoiser.vcxproj  temporal_denoiser.vcxproj.filters  temporal_denoiser_main.cpp  temporal_denoiser_shared.h
samples/texture/: CMakeLists.txt  optix_kernels.cu  texture.vcxproj  texture.vcxproj.filters  texture_main.cpp  texture_shared.h  texture_vs2026.vcxproj  texture_vs2026.vcxproj.filters
samples/uber/: CMakeLists.txt  deform.cu  optix_kernels.cu  post_process.cu  sphere_bounding_box.cu  uber.vcxproj  uber.vcxproj.filters  uber_main.cpp  uber_shared.h
samples/uber/shaders/: scale.frag
(+90 files in other folders)
